--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -5,7 +5,8 @@
     "react"
     ],
     "rules": {
-      "no-unused-vars": [1, { "varsIgnorePattern": "^h$" }]
+      "no-unused-vars": [1, { "varsIgnorePattern": "^h$" }],
+      "react/jsx-uses-vars":2
     },
     "parserOptions": {
       "ecmaFeatures": {
