--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -7,6 +7,7 @@ services:
     volumes:
       - ./URLS:/var/URLS
       - ./log:/var/log:rw
+      - /etc/localtime:/etc/localtime:ro
     environment:
       - CRON_STRINGS=*/10 * * * * /bin/sh /scripts/run.sh
 
