--- a/package.json
+++ b/package.json
@@ -8,12 +8,12 @@
   "scripts": {
     "test": "ava",
     "prebuild": "npm test",
-    "precommit": "npm test",
+    "prepush": "npm test",
     "preversion": "npm test && git pull --tags",
     "version": "npm run build",
-    "portversion": "git push origin --tags",
+    "postversion": "git push origin --tags",
     "build": "webpack --env=production",
-    "dev": "webpack-dev-server --inline --hot --env=development"
+    "start": "webpack-dev-server --inline --hot --env=development"
   },
   "ava": {
     "require": [
