--- a/.editorconfig
+++ b/.editorconfig
@@ -9,5 +9,5 @@ trim_trailing_whitespace = true
 insert_final_newline = true
 
 [*.{js,jsx,html,sh}]
-indent_style = tab
+indent_style = space
 indent_size = 2
