--- a/.gitignore
+++ b/.gitignore
@@ -1,58 +1,2 @@
-# Logs
-logs
-*.log
-npm-debug.log*
-yarn-debug.log*
-yarn-error.log*
-
-# Dependency directories
 node_modules/
-
-.npm
-.eslintcache
-*.tgz
-.vscode
-*.py[cod]
-*.so
-*.egg
-*.egg-info
-dist
-build
-eggs
-.eggs
-parts
-bin
-var
-sdist
-wheelhouse
-develop-eggs
-.installed.cfg
-lib
-lib64
-venv*/
-pyvenv*/
-pip-log.txt
-.coverage
-.tox
-.coverage.*
-nosetests.xml
-coverage.xml
-htmlcov
-
-# Mr Developer
-.mr.developer.cfg
-.project
-.pydevproject
-.idea
-*.iml
-*.komodoproject
-.DS_Store
-.build
-.ve
-.env
-.cache
-.pytest
-.bootstrap
-.appveyor.token
-*.bak
-mockdata/
+mockdata
