--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -4,4 +4,11 @@ services:
   node:
     image: node:latest
     volumes:
-      - ./:/var/www:rw
+      - ./node_modules:/var/tmp/node_modules:rw
+      - ./.eslintrc.json:/var/tmp/.eslintrc.json
+      - ./package.json:/var/tmp/package.json
+      - ./package-lock.json:/var/tmp/package-lock.json
+      - ./webpack.config.js:/var/tmp/webpack.config.js
+      - ./src:/var/tmp/src
+      - ./test:/var/tmp/test
+      - ./mockdata:/var/tmp/mockdata
