--- a/app/.editorconfig
+++ b/app/.editorconfig
@@ -1,13 +1,1 @@
-# EditorConfig is awesome: http://EditorConfig.org
-
-root = true
-
-[*]
-end_of_line = lf
-charset = utf-8
-trim_trailing_whitespace = true
-insert_final_newline = true
-
-[*.{js,jsx,html,sh}]
-indent_style = space
-indent_size = 2
+../.editorconfig
