--- a/app/.eslintrc.json
+++ b/app/.eslintrc.json
@@ -1,25 +1,1 @@
-{
-  "parser": "babel-eslint",
-  "extends": "eslint:recommended",
-  "plugins": [ "react" ],
-  "rules": {
-    "no-unused-vars": [1, { "varsIgnorePattern": "^h$" }],
-    "no-debugger": 1,
-    "no-console": 1,
-    "react/jsx-uses-vars":2
-  },
-  "parserOptions": {
-    "ecmaFeatures": {
-      "modules": true,
-      "jsx": true
-    }
-  },
-  "env": {
-    "browser": true,
-    "node": true,
-    "es6": true
-  },
-  "globals": {
-    "expect": true
-  }
-}
+../.eslintrc.json
