--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -2,6 +2,24 @@ version: '3'
 
 services:
 
+  api:
+
+    image: node:latest
+    working_dir: /var/tmp
+
+    command: ["npm"]
+
+    expose:
+      - "8080"
+
+    environment:
+      - SSH_AUTH_SOCK=/ssh_agent
+
+    volumes:
+      - $SSH_AUTH_SOCK:/ssh_agent
+      - ./api:/var/tmp
+      # - ./.git:/var/tmp/.git:rw
+      - ./api/node_modules:/var/tmp/node_modules:rw
   app:
 
     image: node:latest
@@ -18,5 +36,5 @@ services:
     volumes:
       - $SSH_AUTH_SOCK:/ssh_agent
       - ./app:/var/tmp
-      - ./.git:/var/tmp/.git:rw
+      # - ./.git:/var/tmp/.git:rw
       - ./app/node_modules:/var/tmp/node_modules:rw
