apollo running again

--- a/.editorconfig
+++ b/.editorconfig
@@ -1,13 +1,9 @@
-# EditorConfig is awesome: http://EditorConfig.org
-
 root = true
 
-[*]
-end_of_line = lf
-charset = utf-8
-trim_trailing_whitespace = true
-insert_final_newline = true
-
-[*.{js,jsx,html,sh}]
+[{*.json,.docker-compose.yml,*.js}]
 indent_style = space
 indent_size = 2
+
+[*]
+insert_final_newline = true
+end_of_line = lf
