--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
   "author": "Igor Almeida <igor.p.almeida@gmail.com>",
   "license": "MIT",
   "scripts": {
-    "test": "echo ava",
+    "test": "ava",
     "server": "nodemon ./src/server.js --exec babel-node"
   },
   "ava": {
@@ -30,6 +30,7 @@
   },
   "dependencies": {
     "apollo-server-express": "^1.3.0",
+    "ava": "^0.24.0",
     "babel-cli": "^6.26.0",
     "babel-plugin-transform-async-to-generator": "^6.24.1",
     "babel-plugin-transform-object-rest-spread": "^6.26.0",
