--- a/package.json
+++ b/package.json
@@ -9,7 +9,9 @@
   "license": "MIT",
   "scripts": {
     "test": "ava",
-    "start": "nodemon -w ./src ./src/index.js --exec babel-node"
+    "api": "nodemon -w ./src/api -w ./src/api.js ./src/api.js --exec babel-node",
+    "dev": "NODE_ENV=development webpack-dev-server --inline --hot --progress",
+    "build": "NODE_ENV=production webpack --progress"
   },
   "ava": {
     "require": [
@@ -19,29 +21,35 @@
       "test/*"
     ]
   },
-  "babel": {
-    "presets": [
-      "env"
-    ],
-    "plugins": [
-      "transform-object-rest-spread",
-      "transform-async-to-generator"
-    ]
-  },
   "dependencies": {
     "apollo-server-express": "^1.3.0",
     "ava": "^0.24.0",
     "babel-cli": "^6.26.0",
+    "babel-core": "^6.26.0",
+    "babel-loader": "^7.1.2",
     "babel-plugin-transform-async-to-generator": "^6.24.1",
+    "babel-plugin-transform-decorators-legacy": "^1.3.4",
     "babel-plugin-transform-object-rest-spread": "^6.26.0",
+    "babel-plugin-transform-react-jsx": "^6.24.1",
     "babel-preset-env": "^1.6.1",
+    "babel-register": "^6.26.0",
     "body-parser": "^1.18.2",
     "express": "^4.16.2",
+    "extract-text-webpack-plugin": "^3.0.2",
     "graphql": "^0.11.7",
-    "graphql-tools": "^2.13.0",
+    "graphql-tools": "^2.19.0",
+    "html-webpack-plugin": "^2.30.1",
     "node-fetch": "^1.7.3",
-    "nodemon": "^1.12.1",
-    "ramda": "^0.25.0"
+    "nodemon": "^1.14.11",
+    "preact": "^8.2.7",
+    "preact-compat": "^3.18.0",
+    "preact-redux": "^2.0.3",
+    "ramda": "^0.25.0",
+    "redux": "^3.7.2",
+    "source-map-loader": "^0.2.3",
+    "url-loader": "^0.6.2",
+    "webpack": "^3.10.0",
+    "webpack-dev-server": "^2.11.1"
   },
   "devDependencies": {},
   "description": "",
